--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
-    "jotai": "https://pkg.csb.dev/pmndrs/jotai/commit/2d0d4ad9/jotai",
+    "jotai": "^2.6.0",
     "lucide-react": "0.563.0",
-    "recharts": "3.7.0",
+    "recharts": "2.12.0",
     "react-is": "19.2.4"
   },
   "devDependencies": {
