--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "main": "src/index.tsx",
   "dependencies": {
     "react": "17.0.2",
+    "@google/generative-ai": "^0.1.3",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
     "jotai": "^2.6.0",
