--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jotai": "^2.6.0",
     "lucide-react": "0.263.1",
     "recharts": "2.12.0",
-    "react-is": "17.0.2"
+    "react-is": "17.0.2",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "17.0.0",
