--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,41 @@
+# Dependências
 node_modules
+.pnp
+.pnp.js
+
+# Builds
+build
+dist
+.next
+out
+
+# Variáveis de Ambiente (NUNCA COMMITAR!)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Sistema Operacional
+.DS_Store
+Thumbs.db
+
+# IDEs
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# Testes
+coverage
+.nyc_output
+
+# Vercel
+.vercel
