--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "@types/node": "^20.0.0",
+    "@vercel/node": "^3.0.0",
     "typescript": "4.1.3"
   },
   "scripts": {
